handle Expense service