@@ -56,7 +56,9 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_" + this.role.name())
+        );
     }
 
     @Override
@@ -82,4 +84,5 @@ public class User implements UserDetails {
     public enum UserRole {
         ADMIN, PHARMACIST, VIEWER, MANAGER
     }
+
 }
